crates/pg_syntax/tests/snapshots/postgres_regress/truncate@128.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE truncate_b;
---
TruncateStmt@0..20
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..19
    Ident@9..19 "truncate_b"
  Ascii59@19..20 ";"

