crates/pg_syntax/tests/snapshots/postgres_regress/truncate@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE truncate_b RESTART IDENTITY;
---
TruncateStmt@0..37
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..19
    Ident@9..19 "truncate_b"
  Whitespace@19..20 " "
  Restart@20..27 "RESTART"
  Whitespace@27..28 " "
  IdentityP@28..36 "IDENTITY"
  Ascii59@36..37 ";"

